# MindEngine

./: .gitignore  CMakeLists.txt  Doxyfile  MindEngine.sln  MindEngine.vcxproj  MindEngine.vcxproj.filters  README.md  main.cpp
Database/: DataGroup.cpp  DataGroup.h  DataNode.cpp  DataNode.h  Datum.cpp  Datum.h
Docs/html/: DataGroupMatch_8h_source.html  DataGroup_8h_source.html  DataNodeMatch_8h_source.html  DataNode_8h_source.html  Datum_8h_source.html  IdCheck_8h_source.html  Match_8h_source.html  NumberDatumMatch_8h_source.html  Rule_8h_source.html  annotated.html  classDataGroupMatch-members.html  classDataGroupMatch.html  classDatabase_1_1DataGroup-members.html  classDatabase_1_1DataGroup.html  classDatabase_1_1DataNode-members.html  classDatabase_1_1DataNode.html  classDatabase_1_1Datum-members.html  classDatabase_1_1Datum.html  classRuleBased_1_1DataGroup-members.html  classRuleBased_1_1DataGroup.html  classRuleBased_1_1DataNode-members.html  classRuleBased_1_1DataNode.html  classRuleBased_1_1Datum-members.html  classRuleBased_1_1Datum.html  classRuleBased_1_1IdCheck-members.html  classRuleBased_1_1IdCheck.html  classRuleBased_1_1Rule-members.html  classRuleBased_1_1Rule.html  classRules_1_1Rule-members.html  classRules_1_1Rule.html  classes.html  classtinyxml2_1_1DynArray-members.html  classtinyxml2_1_1DynArray.html  classtinyxml2_1_1MemPool-members.html  classtinyxml2_1_1MemPool.html  classtinyxml2_1_1MemPoolT-members.html  classtinyxml2_1_1MemPoolT.html  classtinyxml2_1_1StrPair-members.html  classtinyxml2_1_1StrPair.html  classtinyxml2_1_1XMLAttribute-members.html  (+106 more)
Docs/latex/: annotated.tex  classDataGroupMatch.tex  refman.aux  (+27 more)
Include/: StringUtilities.h
MindEngine.xcodeproj/: project.pbxproj
Sample/: DataTreeFactory.cpp  DataTreeFactory.h  Database.xml  DatabaseClasses.xml  Rules.xml  RulesFactory.cpp  RulesFactory.h  Sample.vcxproj  Sample.vcxproj.filters  main.cpp
Source/: StringUtilities.cpp
(+120 files in other folders)
